// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefaultSticker /> matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="default-sticker default-sticker-variant-default default-sticker-palette-default"
    data-testid="default-sticker"
  >
    <strong
      class="strong strong-size-sm default-sticker-text"
      data-testid="strong"
    >
      Snapshot Sticker
    </strong>
  </div>
</DocumentFragment>
`;

exports[`<DefaultSticker /> matches snapshot with image prop 1`] = `
<DocumentFragment>
  <div
    class="default-sticker default-sticker-variant-default default-sticker-palette-default"
    data-testid="default-sticker"
  >
    <img
      alt="alt text"
      src="https://assets.odido.nl/1600x900/a2c094c8eb/mid-hero-stocksy_txpfcee7f02fc0400_originaldelivery_4220176.WebP"
    />
  </div>
</DocumentFragment>
`;

exports[`<DefaultSticker /> matches snapshot with image prop and variant emphasised 1`] = `
<DocumentFragment>
  <div
    class="default-sticker default-sticker-variant-emphasised default-sticker-palette-default"
    data-testid="default-sticker"
  >
    <div
      aria-hidden="true"
      class="glow-gradient glow4 default-sticker-gradient no-hover"
      data-testid="glow-gradient"
      style="z-index: 0;"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="100%"
        preserveAspectRatio="xMidYMid slice"
        viewBox="0 0 960 1080"
        width="100%"
      >
        <g>
          <g
            clip-path="url(#clip:r3:)"
          >
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_linear_1_214-:r3:)"
            />
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_radial_1_215-:r3:)"
            />
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_radial_1_216-:r3:)"
            />
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_radial_1_217-:r3:)"
            />
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_radial_1_218-:r3:)"
            />
          </g>
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear_1_214-:r3:"
              x1="960"
              x2="3.57628e-05"
              y1="2.86102e-05"
              y2="1080"
            >
              <stop
                offset="0.777327"
                stop-color="var(--linear-stop-1)"
              />
              <stop
                offset="1"
                stop-color="var(--linear-stop-2)"
              />
            </lineargradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(512.887 -51.8359) rotate(81.5402) scale(1259.49 688.866)"
              gradientUnits="userSpaceOnUse"
              id="paint0_radial_1_215-:r3:"
              r="1"
            >
              <stop
                offset="0.66"
                stop-color="var(--radial-stop-1)"
              />
              <stop
                offset="0.84"
                stop-color="var(--radial-stop-2)"
              />
              <stop
                offset="1"
                stop-color="var(--radial-stop-3)"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(694.036 444.213) rotate(81.8699) scale(871.282 508.378)"
              gradientUnits="userSpaceOnUse"
              id="paint0_radial_1_216-:r3:"
              r="1"
            >
              <stop
                stop-color="var(--radial-stop-4)"
              />
              <stop
                offset="0.33941"
                stop-color="var(--radial-stop-5)"
              />
              <stop
                offset="0.739171"
                stop-color="var(--radial-stop-6)"
              />
              <stop
                offset="1"
                stop-color="var(--radial-stop-7)"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(639.043 117.686) rotate(77.0217) scale(1035.7 500.267)"
              gradientUnits="userSpaceOnUse"
              id="paint0_radial_1_217-:r3:"
              r="1"
            >
              <stop
                offset="0.578582"
                stop-color="var(--radial-stop-8)"
              />
              <stop
                offset="0.697843"
                stop-color="var(--radial-stop-9)"
              />
              <stop
                offset="1"
                stop-color="var(--radial-stop-10)"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(615.816 -56.5526) rotate(90) scale(835.571 555.545)"
              gradientUnits="userSpaceOnUse"
              id="paint0_radial_1_218-:r3:"
              r="1"
            >
              <stop
                offset="0.00787439"
                stop-color="var(--radial-stop-11)"
              />
              <stop
                offset="0.565"
                stop-color="var(--radial-stop-12)"
              />
              <stop
                offset="0.708535"
                stop-color="var(--radial-stop-13)"
              />
              <stop
                offset="1"
                stop-color="var(--radial-stop-14)"
                stop-opacity="0"
              />
            </radialgradient>
            <clippath
              id="clip:r3:"
            >
              <path
                d="M0 0H960V1080H0z"
                fill="#fff"
              />
            </clippath>
          </defs>
        </g>
      </svg>
    </div>
    <img
      alt="alt text"
      src="image.png"
    />
  </div>
</DocumentFragment>
`;

exports[`<DefaultSticker /> matches snapshot with variant emphasised 1`] = `
<DocumentFragment>
  <div
    class="default-sticker default-sticker-variant-emphasised default-sticker-palette-default"
    data-testid="default-sticker"
  >
    <div
      aria-hidden="true"
      class="glow-gradient glow4 default-sticker-gradient no-hover"
      data-testid="glow-gradient"
      style="z-index: 0;"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="100%"
        preserveAspectRatio="xMidYMid slice"
        viewBox="0 0 960 1080"
        width="100%"
      >
        <g>
          <g
            clip-path="url(#clip:r2:)"
          >
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_linear_1_214-:r2:)"
            />
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_radial_1_215-:r2:)"
            />
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_radial_1_216-:r2:)"
            />
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_radial_1_217-:r2:)"
            />
            <path
              d="M960 0H0v1080h960V0z"
              fill="url(#paint0_radial_1_218-:r2:)"
            />
          </g>
          <defs>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="paint0_linear_1_214-:r2:"
              x1="960"
              x2="3.57628e-05"
              y1="2.86102e-05"
              y2="1080"
            >
              <stop
                offset="0.777327"
                stop-color="var(--linear-stop-1)"
              />
              <stop
                offset="1"
                stop-color="var(--linear-stop-2)"
              />
            </lineargradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(512.887 -51.8359) rotate(81.5402) scale(1259.49 688.866)"
              gradientUnits="userSpaceOnUse"
              id="paint0_radial_1_215-:r2:"
              r="1"
            >
              <stop
                offset="0.66"
                stop-color="var(--radial-stop-1)"
              />
              <stop
                offset="0.84"
                stop-color="var(--radial-stop-2)"
              />
              <stop
                offset="1"
                stop-color="var(--radial-stop-3)"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(694.036 444.213) rotate(81.8699) scale(871.282 508.378)"
              gradientUnits="userSpaceOnUse"
              id="paint0_radial_1_216-:r2:"
              r="1"
            >
              <stop
                stop-color="var(--radial-stop-4)"
              />
              <stop
                offset="0.33941"
                stop-color="var(--radial-stop-5)"
              />
              <stop
                offset="0.739171"
                stop-color="var(--radial-stop-6)"
              />
              <stop
                offset="1"
                stop-color="var(--radial-stop-7)"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(639.043 117.686) rotate(77.0217) scale(1035.7 500.267)"
              gradientUnits="userSpaceOnUse"
              id="paint0_radial_1_217-:r2:"
              r="1"
            >
              <stop
                offset="0.578582"
                stop-color="var(--radial-stop-8)"
              />
              <stop
                offset="0.697843"
                stop-color="var(--radial-stop-9)"
              />
              <stop
                offset="1"
                stop-color="var(--radial-stop-10)"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="translate(615.816 -56.5526) rotate(90) scale(835.571 555.545)"
              gradientUnits="userSpaceOnUse"
              id="paint0_radial_1_218-:r2:"
              r="1"
            >
              <stop
                offset="0.00787439"
                stop-color="var(--radial-stop-11)"
              />
              <stop
                offset="0.565"
                stop-color="var(--radial-stop-12)"
              />
              <stop
                offset="0.708535"
                stop-color="var(--radial-stop-13)"
              />
              <stop
                offset="1"
                stop-color="var(--radial-stop-14)"
                stop-opacity="0"
              />
            </radialgradient>
            <clippath
              id="clip:r2:"
            >
              <path
                d="M0 0H960V1080H0z"
                fill="#fff"
              />
            </clippath>
          </defs>
        </g>
      </svg>
    </div>
    <strong
      class="strong strong-size-sm default-sticker-text"
      data-testid="strong"
    >
      Snapshot Sticker
    </strong>
  </div>
</DocumentFragment>
`;
